# ccore-ai-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routes/: rag.py
backend/app/services/: rag_stub.py
compose/: docker-compose.dev.yml
diagrams/: app-architecture.mmd
frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml
