[tool.poetry]
name = "ccore-ai-demo-frontend"
version = "0.1.1"
description = "Streamlit demo frontend for CCore-AI"
authors = ["Lauris Neimanis"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
